--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 asgiref==3.5.0
+autopep8==1.6.0
 Django==3.2.11
+django-filter==21.1
+djangorestframework==3.13.1
+pycodestyle==2.8.0
 pytz==2021.3
 sqlparse==0.4.2
+toml==0.10.2
 typing_extensions==4.0.1
